# pinguqueen

./: .gitignore  CMakeLists.txt  readme.md
benchmarks/: art-index-builder-benchmark.cpp  radix-trie-benchmark.cpp  sandbox.cpp
src/: global.hpp  main.cpp
src/adaptive-radix-trie/: adaptive-radix-trie.cpp  adaptive-radix-trie.hpp  node.cpp  node.hpp
src/core/: file-info.cpp  file-info.hpp  visualiser.cpp  visualiser.hpp
src/file-handling/: ArtIndexBuilder.cpp  ArtIndexBuilder.hpp  FileExtractor.cpp  FileExtractor.h
src/radix-trie/: adaptive-radix-trie.cpp  adaptive-radix-trie.hpp  file-info.hpp  node.cpp  node.hpp  node.inl  radix-trie.cpp  radix-trie.hpp
tests/: art-index-builder-test.cpp  radix-test.cpp
tests/support/: test-suite.hpp
unnötige Dokumentation/: node.md
